--- a/Assets/style.css
+++ b/Assets/style.css
@@ -115,17 +115,13 @@ body{
     border: none;
 }
 
-.comments .tanggal i{
-    padding: 1px;
+.comment i{
+    gap: 10;
+    font-size: 18px;
     cursor: pointer;
-    margin-left: 10px;
 }
 
-.comments .tanggal i{
-    font-size: 16px;
-}
-
-.comments .tanggal i:hover{
+.comment i:hover{
     color: #09B451;
 }
 
